# aOS-UI

./: Cargo.toml  README.md
examples/: showcase.rs
src/: lib.rs  theme.rs
src/widgets/: accordion.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  dialog.rs  mod.rs  navbar.rs  pricing_table.rs  progress.rs  radio.rs  select.rs  separator.rs  skeleton.rs  slider.rs  spinner.rs  stat_card.rs  stepper.rs  switch.rs  table.rs  tabs.rs  testimonial_card.rs  text_input.rs  timeline.rs  tooltip.rs  window_controls.rs
