[package]
name = "aos-ui"
version = "0.1.0"
edition = "2021"
description = "aOS Desktop UI Component Library — Native Iced widgets for OpenBSD"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["canvas", "image", "svg", "tokio"] }

[[example]]
name = "showcase"
path = "examples/showcase.rs"
